Fix: correct my-account menu overflow-x on touchscreens

--- a/client/src/sass/application.scss
+++ b/client/src/sass/application.scss
@@ -320,6 +320,7 @@ table {
         padding-left: 15px;
         padding-right: 15px;
         margin-bottom: $sub-menu-margin-bottom-small-view;
+        overflow-x: auto;
       }
 
       .admin-sub-header {
@@ -382,6 +383,10 @@ table {
     &:not(.expanded) {
       .admin-sub-header {
         @include admin-sub-header-responsive($menu-width/2 + $expanded-horizontal-margins/3);
+      }
+
+      .sub-menu {
+        overflow-x: auto;
       }
     }
   }
